deployments-2/frontend/lh_staff_frontend/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingresslhstafffrontend
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    #nginx.ingress.kubernetes.io/http2-push-preload: "true"
spec:
  rules:
    - host: staging-staff.linear.health
      http:
        paths:
         - path: /
           pathType: Prefix
           backend:
             service:
              name: servicelhstafffrontend
              port:
                number: 80
